Upgrading OpenSearch and modernizer-maven-plugin